// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Child run page should cancel run 1`] = `
<Fragment>
  <RunStatus
    experimentName="experimentName"
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
  />
  <ChildRunGrid
    canceling={false}
    experimentName="experimentName"
    goBack={false}
    goToLog={false}
    hideCancelDialog={false}
    onModelDeploy={[Function]}
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
    runMetrics={
      Object {
        "accuracy_table": Object {},
        "confusion_matrix": Object {},
        "scalarMet1": "1",
        "scalarMet2": "2",
        "scalarMet3": "3",
      }
    }
  />
  <ConfirmationDialog
    hidden={false}
    onClose={[Function]}
    onConfirm={[Function]}
    subText="Are you sure you want to cancel run: AutoML_001"
    title="Cancel Run?"
  />
</Fragment>
`;

exports[`Child run page should not cancel run when experiment name is undefined 1`] = `
<Fragment>
  <RunStatus
    experimentName=""
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
  />
  <ChildRunGrid
    canceling={false}
    experimentName=""
    goBack={false}
    goToLog={false}
    hideCancelDialog={false}
    onModelDeploy={[Function]}
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
    runMetrics={
      Object {
        "accuracy_table": Object {},
        "confusion_matrix": Object {},
        "scalarMet1": "1",
        "scalarMet2": "2",
        "scalarMet3": "3",
      }
    }
  />
  <ConfirmationDialog
    hidden={false}
    onClose={[Function]}
    onConfirm={[Function]}
    subText="Are you sure you want to cancel run: AutoML_001"
    title="Cancel Run?"
  />
</Fragment>
`;

exports[`Child run page should render 1`] = `
<Fragment>
  <RunStatus
    experimentName="experimentName"
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
  />
  <ChildRunGrid
    canceling={false}
    experimentName="experimentName"
    goBack={false}
    goToLog={false}
    hideCancelDialog={true}
    onModelDeploy={[Function]}
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
    runMetrics={
      Object {
        "accuracy_table": Object {},
        "confusion_matrix": Object {},
        "scalarMet1": "1",
        "scalarMet2": "2",
        "scalarMet3": "3",
      }
    }
  />
  <ConfirmationDialog
    hidden={true}
    onClose={[Function]}
    onConfirm={[Function]}
    subText="Are you sure you want to cancel run: AutoML_001"
    title="Cancel Run?"
  />
</Fragment>
`;

exports[`Child run page should render grid when no run metrics 1`] = `
<Fragment>
  <RunStatus
    experimentName="experimentName"
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
  />
  <ChildRunGrid
    canceling={false}
    experimentName="experimentName"
    goBack={false}
    goToLog={false}
    hideCancelDialog={true}
    onModelDeploy={[Function]}
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
  />
  <ConfirmationDialog
    hidden={true}
    onClose={[Function]}
    onConfirm={[Function]}
    subText="Are you sure you want to cancel run: AutoML_001"
    title="Cancel Run?"
  />
</Fragment>
`;

exports[`Child run page should render grid when run artifact contents are undefined 1`] = `
<Fragment>
  <RunStatus
    experimentName="experimentName"
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
  />
  <ChildRunGrid
    canceling={false}
    experimentName="experimentName"
    goBack={false}
    goToLog={false}
    hideCancelDialog={true}
    onModelDeploy={[Function]}
    run={
      Object {
        "endTimeUtc": 2019-02-01T08:20:30.000Z,
        "parentRunId": "AutoML_000",
        "properties": Object {
          "iteration": "9",
          "run_algorithm": "Ensemble",
          "run_preprocessor": "rpp1",
        },
        "runId": "AutoML_001",
        "startTimeUtc": 2019-02-01T08:20:00.000Z,
        "status": "Completed",
      }
    }
  />
  <ConfirmationDialog
    hidden={true}
    onClose={[Function]}
    onConfirm={[Function]}
    subText="Are you sure you want to cancel run: AutoML_001"
    title="Cancel Run?"
  />
</Fragment>
`;
